--- a/HealthServicesApp/app/src/main/res/layout/activity_splash.xml
+++ b/HealthServicesApp/app/src/main/res/layout/activity_splash.xml
@@ -3,19 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
+    <TextView
         android:id="@+id/welcomeText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        android:layout_height="wrap_content" />
 
-    <EditText
+    <TextView
         android:id="@+id/signInText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/signOutBtn"
