Final changes to Splash. Now works with Patient, Employee and Admin. Account creation works completely, same with login. Still need to update UML and hash passwords. But it is done otherwise.

--- a/HealthServicesApp/app/src/main/res/layout/activity_splash.xml
+++ b/HealthServicesApp/app/src/main/res/layout/activity_splash.xml
@@ -6,12 +6,14 @@
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/signInText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/signOutBtn"
